logs/starterpyth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/starterpyth'...
Compiling './lib/python3.5/site-packages/starterpyth/cliforms.py'...
Listing './lib/python3.5/site-packages/starterpyth/commands'...
Compiling './lib/python3.5/site-packages/starterpyth/commands/__init__.py'...
Compiling './lib/python3.5/site-packages/starterpyth/commands/dependencies.py'...
Compiling './lib/python3.5/site-packages/starterpyth/commands/doc_test.py'...
Compiling './lib/python3.5/site-packages/starterpyth/commands/gen_doc_api.py'...
Compiling './lib/python3.5/site-packages/starterpyth/commands/lint.py'...
Compiling './lib/python3.5/site-packages/starterpyth/commands/profiling.py'...
Listing './lib/python3.5/site-packages/starterpyth/commands/templates'...
Compiling './lib/python3.5/site-packages/starterpyth/core.py'...
Listing './lib/python3.5/site-packages/starterpyth/data'...
Listing './lib/python3.5/site-packages/starterpyth/data/licenses'...
Compiling './lib/python3.5/site-packages/starterpyth/log.py'...
Compiling './lib/python3.5/site-packages/starterpyth/model.py'...
Compiling './lib/python3.5/site-packages/starterpyth/models.py'...
Listing './lib/python3.5/site-packages/starterpyth/plugins'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/base'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/base/templates'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/starter_cython'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/starter_cython/extra_templates'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/starter_cython/templates'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/starter_cython/templates/doc'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/starter_cython/templates/doc/source'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/starter_cython/templates/doc/source/externals'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/starter_cython/templates/{{module_name}}'...
Listing './lib/python3.5/site-packages/starterpyth/plugins/starter_cython/templates/{{module_name}}/tests'...
Listing './lib/python3.5/site-packages/starterpyth/templates'...
Listing './lib/python3.5/site-packages/starterpyth/templates/cli'...
Listing './lib/python3.5/site-packages/starterpyth/templates/cli/{{module_name}}'...
Listing './lib/python3.5/site-packages/starterpyth/templates/common'...
Listing './lib/python3.5/site-packages/starterpyth/templates/common/doc'...
Listing './lib/python3.5/site-packages/starterpyth/templates/common/doc/source'...
Listing './lib/python3.5/site-packages/starterpyth/templates/common/{{module_name}}'...
Listing './lib/python3.5/site-packages/starterpyth/templates/common/{{module_name}}/tests'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/django_data'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/core'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/core/static'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/core/static/bootstrap3'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/core/static/images'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/core/static/js'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/core/templates'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/core/templates/core'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/core/templatetags'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/main_app'...
Listing './lib/python3.5/site-packages/starterpyth/templates/django/{{module_name}}/main_app/migrations'...
Listing './lib/python3.5/site-packages/starterpyth/templates/djangofloor'...
Listing './lib/python3.5/site-packages/starterpyth/templates/djangofloor/{{module_name}}'...
Listing './lib/python3.5/site-packages/starterpyth/templates/djangofloor/{{module_name}}/templates'...
Listing './lib/python3.5/site-packages/starterpyth/templates/djangofloor/{{module_name}}/templates/{{module_name}}'...
Listing './lib/python3.5/site-packages/starterpyth/templates/includes'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package/package'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package/package/{{module_name}}'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package/package/{{module_name}}/tests'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package/translation'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package/translation/{{module_name}}'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package/translation/{{module_name}}/locale'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package/translation/{{module_name}}/locale/xx_XX'...
Listing './lib/python3.5/site-packages/starterpyth/templates/package/translation/{{module_name}}/tests'...
Listing './lib/python3.5/site-packages/starterpyth/tests'...
Compiling './lib/python3.5/site-packages/starterpyth/translation.py'...
Compiling './lib/python3.5/site-packages/starterpyth/utils.py'...
Listing './lib/python3.5/site-packages/starterpyth-1.5.13.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
